# routedoctor

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: campus-routing.json
src/routedoctor/: __init__.py  cli.py  engine.py
tests/: test_core.py  test_engine.py
