[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "routedoctor"
version = "0.1.0"
description = "Explain route selection and diagnose common routing-table failures."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "John Johansson"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
routedoctor = "routedoctor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/routedoctor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
